@@ -12,6 +12,7 @@
    * Updated meson.build to require SDL 2.0.26 which seems to be minimum supported version now
    * Fixed a certain faction being enemies with wild ones when they shouldn't necessarily be
    * Soromid arx now has one non-exclusive heavy non-bio slot
+   * Buffed Scanning Combat AI to have an additional +15% tracking
    * `srs_ferry`: fixed marker not updating for alternative delivery locations
    * `nelly03`: guard against the player changing systems in the middle of mining
    * Translation updates
